fix: Question update api 수정
- 이미지 첨부 부분 수정(test 필요)